# reasoning-efficiency

./: .gitignore  LICENSE  Readme.md  pyproject.toml
experiments/proof_search/: controlgenerator.py  datasets.py  generationutil.py  sanity_checker.ipynb  templaterendering.py  test.ipynb
experiments/proof_search/data/: util.py
experiments/proof_search/experiments/: analysis.ipynb  data-distribution.ipynb  data_processing.py  evaluate.py  fix-answer.ipynb  proof-matching.ipynb  reasoning-efficiency.ipynb
experiments/proof_search/experiments/parser/: order.py  parse_reasoning_models.py
mathgap/: __init__.py  expressions.py  generation_util.py  mathwordproblems.py  problemsample.py  properties.py  util.py
mathgap/data/: util.py
mathgap/data/agents/v1/: agents.csv
mathgap/data/attributes/v1/: attributes.csv
mathgap/instantiate/: __init__.py  entityconsistency.py  instantiation.py  instantiators.py  quantities.py
mathgap/logicalforms/: __init__.py  _gen_util.py  comp.py  compeq.py  container.py  logicalform.py  partwhole.py  rate.py  transfer.py
mathgap/natlang/templates/: __init__.py  condition.py  metadata.py  origin.py  parser.py  sampling.py  template.py  templaterenderer.py  util.py
mathgap/renderers/: __init__.py  graph.py  latex.py  renderer.py  text.py
mathgap/trees/: __init__.py  prooftree.py  timing.py
mathgap/trees/generators/: __init__.py  general.py  generator.py  multi.py
mathgap/trees/rules/: __init__.py  inference_rule.py
mathgap/trees/sampling/: __init__.py  canonical.py  movement.py  order.py  variabletimebased.py
(+40 files in other folders)
